--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3936,7 +3936,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #2c3e50;
+  background-color: rgba(44, 62, 80, 0.75);
   border-color: transparent;
 }
 .navbar-default .navbar-brand {
