--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -76,7 +76,7 @@ hr.star-primary:after {
 header {
     text-align: center;
     color: #fff;
-    background: #18bc9c;
+    background: rgb(111,111,111);
 }
 
 header .container {
